# arm_master

./: CMakeLists.txt  README.md  package.xml  todo
docs/: api_reference.rst  arm_master.rst  brick.rst  conf.py  de_msgs.rst  gazebo_problems.rst  getting_start.rst  home.rst  index.rst  interface.md  interface.rst  real_panda.rst  spawn_doc.rst  spawn_manager_test.rst
docs/_build/doctrees/: api.doctree  api_reference.doctree  arm_master.doctree  brick.doctree  de_msgs.doctree  environment.pickle  gazebo_problems.doctree  getting_start.doctree  home.doctree  index.doctree  interface.doctree  overview.doctree  real_panda.doctree  spawn_doc.doctree  spawn_manager_test.doctree
docs/_build/html/: .buildinfo  api.html  api_reference.html  arm_master.html  brick.html  de_msgs.html  gazebo_problems.html  genindex.html  getting_start.html  home.html  index.html  interface.html  objects.inv  overview.html  py-modindex.html  real_panda.html  search.html  searchindex.js  spawn_doc.html  spawn_manager_test.html
docs/_build/html/_sources/: api_reference.rst.txt  arm_master.rst.txt  brick.rst.txt  (+7 more)
launch/: examples.txt  light.launch  light_ITA.launch  panda_one_brick.launch  sim.launch  sim_ITA.launch
legacy/: panda_publisher.py  round_path.py  sqaurewavepublisher.py  testing.py
scripts/: TODO.txt  arm_master_functions.py  arm_master_main.py  arm_master_main_ITA.py  arm_server_functions.py  arm_utils.py  brick_manager_server.py  dropped_checker_server.py  dropped_checker_server_ITA.py  generate_wall.py  move_arm_server.py  panda_publisher.py  round_path.py  rowanwall.txt  samrowan.py  spawn_manager_temp.py  testing.py
src/: arm_control_fine_server.cpp  hello_world.cpp  talker.cpp
srv/: MoveArm.srv
worlds/: brick.world
